[package]
name = "betwixt"
version = "0.1.0"
edition = "2021"
description = "Simple, efficient and universal documentation testing and literate programming. Read code between the lines"
authors = ["Zach Bullough<zach.bullough@gmail.com>"]
license = "MIT"

[[bin]]
name = "betwixt"
path = "src/main.rs"

[lib]
name = "betwixt_parse"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
nom = "7.1.1"
